Thu Aug 16 17:42:30 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* secore/indexerconnection.py: Add a check for the database not
	  having been closed.
	* secore/searchconnection.py: Add method for getting an iterator
	  over all the documents in the database.  Add support for
	  rerunning the attempted access if get_document() catches a
	  DatabaseModifiedError.
	* secore/searchconnection_doctest2.txt: Change
	  "get_significant_terms" to "significant_terms()", and test it.

Thu Aug 16 17:24:06 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* secore/searchconnection.py,secore/searchconnection_doctest2.txt:
	  Add new method "get_significant_terms()" which returns the most
	  significant terms in the set of ids specified.

Thu Aug 16 10:22:16 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* secore/searchconnection_doctest2.txt: Add test for supplying a
	  document ID to query_similar() which isn't in the database.

Thu Aug 16 09:49:09 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* docs/introduction.rst: Add documentation for similarity search.

Thu Aug 16 09:15:44 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* secore/searchconnection.py: Retry the expand until we don't get a
	  DatabaseModifiedError.

Thu Aug 16 09:06:44 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* secore/searchconnection.py,secore/searchconnection_doctest2.txt:
	  Implementation of the query_similar() method, returning a query
	  to use to get a new set of results based on similarity.

Wed Aug 08 18:52:24 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* secore/searchconnection.py,secore/searchconnection_doctest2.txt:
	  Add API for performing searches for similar documents.  Currently
	  just works out which fields should be used for performing the
	  similarity comparison, but doesn't do the actual similarity
	  search.

Wed Aug 08 13:37:26 BST 2007  Richard Boulton <richard@lemurconsulting.com>
